[blink] Request compositing update when canvas hibernates/wakes up.

Not requesting the update can lead to the canvas not
being shown, as in the bug referenced below.

BUG=708445

Review-Url: https://codereview.chromium.org/2808493002
Cr-Commit-Position: refs/heads/master@{#465206}

Former-commit-id: 5047940999a9cf13e8635e61112fdaa7db885726